ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: feedback
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      kubernetes.io/tls-acme: "true"
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host:  feedbackapp.ddns.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: feed-app
            port: 
              number: 8000
  tls:
  - secretName: meir-tls
    hosts:
      - meirapp.ddns.net
